# raytracer

./: CMakeLists.txt  README.md
inc/: aabb.h  bvh.h  camera.h  color.h  functions.h  lambertian.h  material.h  metal.h  ray.h  scene.h  shape.h  sphere.h  texture.h  vector3.h
src/: aabb.cpp  bvh.cpp  camera.cpp  color.cpp  functions.cpp  main.cpp  material.cpp  ray.cpp  scene.cpp  sphere.cpp  texture.cpp  vector3.cpp
